--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <modules>
         <module>util</module>
         <module>day1</module>
+        <module>day2</module>
     </modules>
 
     <dependencyManagement>
