Day 3 and some utils

--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,16 @@
         <module>util</module>
         <module>day1</module>
         <module>day2</module>
+        <module>day3</module>
     </modules>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>util</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
                 <artifactId>junit-jupiter</artifactId>
