--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>day1</module>
         <module>day2</module>
         <module>day3</module>
+        <module>day4</module>
     </modules>
 
     <dependencyManagement>
