--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>Day5</module>
         <module>Day6</module>
         <module>Day7</module>
+        <module>Day8</module>
     </modules>
 
     <dependencyManagement>
