--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
         <module>Day6</module>
         <module>Day7</module>
         <module>Day8</module>
+        <module>Day9</module>
+        <module>Day10</module>
     </modules>
 
     <dependencyManagement>
